[package]
name = "pkl-derive"
version = "0.1.1"
edition = "2021"
homepage = "https://pkl-lang.org"
readme = "README.md"
keywords = ["configuration", "codegen"]
categories = ["config"]
description = "Derive macros for the Pkl-bind crate"
license-file = "LICENSE.txt"

[dependencies]
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["proc-macro"] }
proc-macro2 = "1.0.83"
rmp-serde = "1.3.0"
trybuild = "1.0.96"

[lib]
proc-macro = true

[dev-dependencies]
pkl-bind = { path = "../pkl-bind" }
