[package]
name = "pkl_bind_test_suite"
version = "0.0.0"
authors = ["Ayrton Chilibeck <pkl@blobfish.icu>"]
publish = false
edition = "2021"

[features]
unstable = ["pkl-bind/unstable"]

[dependencies]
pkl-bind = { path = "../pkl-bind" }
pkl-derive = { path = "../pkl-derive" }
rmp-serde = "1.3.0"
trybuild = "1.0.96"
